# health-record-visualizer

./: .gitignore  AltReadMe.md  README.md  README.old.md  _README.md  _TODOs.md  config.py  convert_synthea.py  d3_example.py  d3_template.html  find_tags.py  health.py  health_lib.py  health_lib_apple.py  health_lib_cda.py  import_data.py  main.py  models.py  obs_matcher.py  plot_health.py  preprocess_apple_health.py  preprocess_cda.py  pyproject.toml  requirements.txt  server.py  sparkbase.py  sparklines.py  start_server.py  structure.md  test_health.py  test_obs_matcher.py  test_sparkbase.py  test_xml_reader.py  text_ui.py  xml_reader.py
static/css/: custom.css
static/js/: app.js
templates/: README.txt  apple_overview.html  apple_record.html  base.html  cda_category.html  cda_observation.html  cda_overview.html  conditions.html  fhir_overview.html  generic_data.html  index.html  macros.html  medications.html  observations.html  procedures.html  vital_detail.html  vitals.html
test_data/: export_cda_fraction_source.xml  ref_range.json  ref_range_text.json  test_find_display_names.xml
test_data/list_prefixes_test_dir/: MedicationRequest-test.json  Observation-test-bp.json  Observation-test-bp2.json
